Added response types
